CAL-122 Correct the overflow when we create a lot of events in the same periode.

--- a/modules/linagora.esn.calendar/frontend/app/calendar/calendar-view/event.less
+++ b/modules/linagora.esn.calendar/frontend/app/calendar/calendar-view/event.less
@@ -1,6 +1,7 @@
 @event-border-color: rgba(255,255,255,0.5);
 @event-fade: 0.7;
 @remainingSpaceToAllowDnD: 7px;
+@minWidthForEventsInMobileViews: 0.05em;
 
 .fc-event {
   min-height: 1.5em;
@@ -91,7 +92,12 @@
 }
 
 @media (max-width: @swipe-arrows-max) {
+
   .fc-agendaWeek-view, .fc-agendaThreeDays-view, .fc-agendaDay-view {
+    .fc-event{
+      min-width: @minWidthForEventsInMobileViews;
+    }
+
      & .fc-event .fc-time{
         display: none;
     }
